[brats] don't delete inner bosh between tests
[#158518127](https://www.pivotaltracker.com/story/show/158518127)

Co-authored-by: Michael Xu <mxu@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -771,6 +771,59 @@ jobs:
             put: brats-mutex
             params: {release: brats-mutex}
 
+  - name: bbr-ubuntu-trusty
+    serial: true
+    plan:
+    - do:
+      - aggregate:
+        - get: bosh-src
+          passed:
+          - candidate-release
+        - get: stemcell
+          resource: warden-ubuntu-trusty
+        - get: bosh-release
+          resource: bosh-candidate-release-tarballs
+          trigger: true
+          passed:
+            - candidate-release
+      - put: brats-mutex
+        params: {acquire: true}
+      - task: test-bbr
+        file: bosh-src/ci/tasks/test-bbr.yml
+        tags: ["worker-brats"]
+        privileged: true
+        params: &brats-dbs-params
+          RDS_MYSQL_EXTERNAL_DB_HOST: ((brats-rds-mysql-external-db-host))
+          RDS_MYSQL_EXTERNAL_DB_USER: ((brats-rds-mysql-external-db-user))
+          RDS_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-rds-mysql-external-db-password))
+          RDS_MYSQL_EXTERNAL_DB_NAME: ((brats-rds-mysql-external-db-name))
+          RDS_POSTGRES_EXTERNAL_DB_HOST: ((brats-rds-postgres-external-db-host))
+          RDS_POSTGRES_EXTERNAL_DB_USER: ((brats-rds-postgres-external-db-user))
+          RDS_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-rds-postgres-external-db-password))
+          RDS_POSTGRES_EXTERNAL_DB_NAME: ((brats-rds-postgres-external-db-name))
+          GCP_MYSQL_EXTERNAL_DB_HOST: ((brats-gcp-mysql-external-db-host))
+          GCP_MYSQL_EXTERNAL_DB_USER: ((brats-gcp-mysql-external-db-user))
+          GCP_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-gcp-mysql-external-db-password))
+          GCP_MYSQL_EXTERNAL_DB_NAME: ((brats-gcp-mysql-external-db-name))
+          GCP_MYSQL_EXTERNAL_DB_CLIENT_CERTIFICATE: ((brats-gcp-mysql-external-db-client-certificate))
+          GCP_MYSQL_EXTERNAL_DB_CLIENT_PRIVATE_KEY: ((brats-gcp-mysql-external-db-client-private-key))
+          GCP_POSTGRES_EXTERNAL_DB_HOST: ((brats-gcp-postgres-external-db-host))
+          GCP_POSTGRES_EXTERNAL_DB_USER: ((brats-gcp-postgres-external-db-user))
+          GCP_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-gcp-postgres-external-db-password))
+          GCP_POSTGRES_EXTERNAL_DB_NAME: ((brats-gcp-postgres-external-db-name))
+          GCP_POSTGRES_EXTERNAL_DB_CLIENT_CERTIFICATE: ((brats-gcp-postgres-external-db-client-certificate))
+          GCP_POSTGRES_EXTERNAL_DB_CLIENT_PRIVATE_KEY: ((brats-gcp-postgres-external-db-client-private-key))
+          STEMCELL_OS: ubuntu-trusty
+        ensure:
+          do:
+            - task: cleanup-external-dbs
+              file: bosh-src/ci/tasks/test-brats-db-cleanup.yml
+              params: *brats-dbs-params
+              attempts: 3
+          ensure:
+            put: brats-mutex
+            params: {release: brats-mutex}
+
   - name: brats-ubuntu-xenial
     serial: true
     plan:
@@ -791,6 +844,59 @@ jobs:
         params: {acquire: true}
       - task: test-brats
         file: bosh-src/ci/tasks/test-brats.yml
+        tags: ["worker-brats"]
+        privileged: true
+        params: &brats-dbs-params
+          RDS_MYSQL_EXTERNAL_DB_HOST: ((brats-rds-mysql-external-db-host))
+          RDS_MYSQL_EXTERNAL_DB_USER: ((brats-rds-mysql-external-db-user))
+          RDS_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-rds-mysql-external-db-password))
+          RDS_MYSQL_EXTERNAL_DB_NAME: ((brats-rds-mysql-external-db-name))
+          RDS_POSTGRES_EXTERNAL_DB_HOST: ((brats-rds-postgres-external-db-host))
+          RDS_POSTGRES_EXTERNAL_DB_USER: ((brats-rds-postgres-external-db-user))
+          RDS_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-rds-postgres-external-db-password))
+          RDS_POSTGRES_EXTERNAL_DB_NAME: ((brats-rds-postgres-external-db-name))
+          GCP_MYSQL_EXTERNAL_DB_HOST: ((brats-gcp-mysql-external-db-host))
+          GCP_MYSQL_EXTERNAL_DB_USER: ((brats-gcp-mysql-external-db-user))
+          GCP_MYSQL_EXTERNAL_DB_PASSWORD: ((brats-gcp-mysql-external-db-password))
+          GCP_MYSQL_EXTERNAL_DB_NAME: ((brats-gcp-mysql-external-db-name))
+          GCP_MYSQL_EXTERNAL_DB_CLIENT_CERTIFICATE: ((brats-gcp-mysql-external-db-client-certificate))
+          GCP_MYSQL_EXTERNAL_DB_CLIENT_PRIVATE_KEY: ((brats-gcp-mysql-external-db-client-private-key))
+          GCP_POSTGRES_EXTERNAL_DB_HOST: ((brats-gcp-postgres-external-db-host))
+          GCP_POSTGRES_EXTERNAL_DB_USER: ((brats-gcp-postgres-external-db-user))
+          GCP_POSTGRES_EXTERNAL_DB_PASSWORD: ((brats-gcp-postgres-external-db-password))
+          GCP_POSTGRES_EXTERNAL_DB_NAME: ((brats-gcp-postgres-external-db-name))
+          GCP_POSTGRES_EXTERNAL_DB_CLIENT_CERTIFICATE: ((brats-gcp-postgres-external-db-client-certificate))
+          GCP_POSTGRES_EXTERNAL_DB_CLIENT_PRIVATE_KEY: ((brats-gcp-postgres-external-db-client-private-key))
+          STEMCELL_OS: ubuntu-xenial
+        ensure:
+          do:
+            - task: cleanup-external-dbs
+              file: bosh-src/ci/tasks/test-brats-db-cleanup.yml
+              params: *brats-dbs-params
+              attempts: 3
+          ensure:
+            put: brats-mutex
+            params: {release: brats-mutex}
+
+  - name: bbr-ubuntu-xenial
+    serial: true
+    plan:
+    - do:
+      - aggregate:
+        - get: bosh-src
+          passed:
+          - candidate-release
+        - get: stemcell
+          resource: warden-ubuntu-xenial
+        - get: bosh-release
+          resource: bosh-candidate-release-tarballs
+          trigger: true
+          passed:
+            - candidate-release
+      - put: brats-mutex
+        params: {acquire: true}
+      - task: test-bbr
+        file: bosh-src/ci/tasks/test-bbr.yml
         tags: ["worker-brats"]
         privileged: true
         params: &brats-dbs-params
