[brats] [cleanup] Extract db params from terraform
[#158518127](https://www.pivotaltracker.com/story/show/158518127)

Co-authored-by: Difan Zhao <dzhao@pivotal.io>

--- a/ci/tasks/test-brats-db-cleanup.yml
+++ b/ci/tasks/test-brats-db-cleanup.yml
@@ -8,6 +8,8 @@ image_resource:
 
 inputs:
 - name: bosh-src
+- name: database-metadata
+- name: gcp-ssl-config
 
 run:
   path: bosh-src/ci/tasks/test-brats-db-cleanup.sh
