Partial revert of removing bosh_cpi.
- Registry client would need more work
- Still doesn’t use the bosh_cpi in test for unit tests
- Integration tests still rely on the gem too much for current priority
- Keeps some changes to move toward removing bosh_cpi
- Ignore bosh_cpi for rubocop

[#158923613](https://www.pivotaltracker.com/story/show/158923613)

This reverts commit 6c8dc52968605121754043982fe71e04e1a58247.

--- a/src/.rubocop.yml
+++ b/src/.rubocop.yml
@@ -1,9 +1,10 @@
 AllCops:
-  TargetRubyVersion: 2.4
+  TargetRubyVersion: 2.4.4
   Include:
   - Rakefile
   Exclude:
   - tmp/**/*
+  - src/bosh_cpi/**/*.rb
 
 Style/FrozenStringLiteralComment:
   Enabled: false
