[brats] make terraformed-inputs optional
database-metadata and gcp-ssl-config come from terraform and are only
used if we're running external db tests.

[#158168890](https://www.pivotaltracker.com/story/show/158168890)

Co-authored-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/ci/tasks/test-brats.yml
+++ b/ci/tasks/test-brats.yml
@@ -12,7 +12,9 @@ inputs:
   - name: stemcell
   - name: bosh-release
   - name: database-metadata
+    optional: true
   - name: gcp-ssl-config
+    optional: true
 
 run:
   path: bosh-src/ci/tasks/test-brats.sh
