--- a/ci/docker/main-bosh-docker/Dockerfile
+++ b/ci/docker/main-bosh-docker/Dockerfile
@@ -14,7 +14,8 @@ RUN \
   BOSH_RELEASE_URL="$(bosh int /usr/local/bosh-deployment/bosh.yml --path /releases/name=bosh/url)" \
   BPM_RELEASE_URL="$(bosh int /usr/local/bosh-deployment/bosh.yml --path /releases/name=bpm/url)" && \
   curl -o /usr/local/bosh.tgz "$BOSH_RELEASE_URL" && \
-  curl -o /usr/local/bpm.tgz "$BPM_RELEASE_URL"
+  curl -o /usr/local/bpm.tgz "$BPM_RELEASE_URL" && \
+  apt-get update && apt-get install -y jq
 
 COPY local-releases.yml /usr/local/local-releases.yml
 COPY start-bosh.sh /usr/local/bin/start-bosh
