[brats] make brats parallelizable
- multiple "inner bosh directors" with network config and names based on
ginkgo node numbers
- pre-compile (by pre deploying) an inner bosh on the first node before
everything else
- multiple databases for external db parallization (rds/gcp)
- deleted edge case testing for bad certs (should be tested in
units/integration)
- add postgres/mysql drivers golang dependencies for database cleanup
steps

[#158518127](https://www.pivotaltracker.com/story/show/158518127)

Co-authored-by: Josh Russett <jrussett@pivotal.io>
Co-authored-by: Jim Myers <jmyers@pivotal.io>
Co-authored-by: Difan Zhao <dzhao@pivotal.io>
Co-authored-by: Cristovao Dutra <cdutra@pivotal.io>
Co-authored-by: Michael Xu <mxu@pivotal.io>

--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/Gopkg.toml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/Gopkg.toml
@@ -16,3 +16,7 @@ required = ["github.com/onsi/ginkgo/ginkgo"]
   non-go = true
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/lib/pq"
