Create acceptance director from candidate tarball
[#158960547](https://www.pivotaltracker.com/story/show/158960547)

Signed-off-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/ci/tasks/setup-env.yml
+++ b/ci/tasks/setup-env.yml
@@ -9,6 +9,7 @@ image_resource:
 
 inputs:
   - name: bosh-src
+  - name: candidate-release
   - name: bbl-state
   - name: stemcell
   - name: zookeeper-release
