--- a/ci/tasks/test-bbr.yml
+++ b/ci/tasks/test-bbr.yml
@@ -11,7 +11,9 @@ inputs:
   - name: stemcell
   - name: bosh-release
   - name: database-metadata
+    optional: true
   - name: gcp-ssl-config
+    optional: true
 
 run:
   path: bosh-src/ci/tasks/test-bbr.sh
