[brats] fix race and cleanup in db tests
- fix race uploading releases from postgres manifest
- fix external db cleanup not having access to certs

[#158518127](https://www.pivotaltracker.com/story/show/158518127)

--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/postgres-94-manifest.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/postgres-94-manifest.yml
@@ -30,9 +30,7 @@ releases:
 - name: bosh
   version: latest
 - name: bpm
-  url: https://bosh.io/d/github.com/cloudfoundry-incubator/bpm-release?v=0.2.0
-  sha1: f2bd126b17b3591160f501d88d79ccf0aba1ae54
-  version: "0.2.0"
+  version: latest
 
 update:
   canaries: 1
