[brats] Fix create-release race in dns test
linked-templates-release was being created during deploy, that can have
a race where multiple nodes will generate the same dev version which
causes it to fail

[#158518127](https://www.pivotaltracker.com/story/show/158518127)

Co-authored-by: Josh Russett <jrussett@pivotal.io>

--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/dns-with-templates-manifest.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/dns-with-templates-manifest.yml
@@ -39,7 +39,7 @@ releases:
   version: latest
   url: file://((dns-release-path))
 - name: linked-template-release
-  version: create
+  version: latest
   url: file://((linked-template-release-path))
 
 stemcells:
