[brats] fix mismatched dns release name

--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/dns-with-templates-manifest.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/dns-with-templates-manifest.yml
@@ -38,7 +38,7 @@ releases:
 - name: bosh-dns
   version: latest
   url: file://((dns-release-path))
-- name: linked-template-release
+- name: linked-templates
   version: latest
   url: file://((linked-template-release-path))
 
