[brats] fix mismatched release name in templates
- version: create used to give us whatever name we wanted, since we now
use good old create-releaese we need to use the correct release name
everywhere
- add missing import in bbr test

[#158518127](https://www.pivotaltracker.com/story/show/158518127)

Co-authored-by: Michael Xu <mxu@pivotal.io>

--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/dns-with-templates-manifest.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/dns-with-templates-manifest.yml
@@ -13,11 +13,11 @@ instance_groups:
   azs: [z1]
   jobs:
   - name: query-with-az-filter
-    release: linked-template-release
+    release: linked-templates
   - name: query-all
-    release: linked-template-release
+    release: linked-templates
   - name: query-individual-instance
-    release: linked-template-release
+    release: linked-templates
   vm_type: default
   stemcell: default
   networks:
@@ -26,7 +26,7 @@ instance_groups:
 - name: provider
   jobs:
   - name: link-provider
-    release: linked-template-release
+    release: linked-templates
   instances: 3
   azs: [z1,z2]
   vm_type: default
