--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -763,7 +763,7 @@ jobs:
         params:
           terraform_source: bosh-src/ci/bats/iaas/aws/terraform
           delete_on_failure: true
-          env_name: bats-ubuntu-trusty-aws
+          env_name: bats-ubuntu-trusty-aws-((branch_name))
       - do:
         - task: deploy-director
           file: bosh-src/ci/bats/tasks/deploy-director.yml
@@ -802,7 +802,7 @@ jobs:
             - put: terraform
               params:
                 terraform_source: bosh-src/ci/bats/iaas/aws/terraform
-                env_name: bats-ubuntu-trusty-aws
+                env_name: bats-ubuntu-trusty-aws-((branch_name))
                 action: destroy
               get_params:
                 action: destroy
