Branch pipelines should not deploy acceptance envs
Co-authored-by: Chris Dutra <cdutra@pivotal.io>

--- a/scripts/create-release-branch-ops.yml
+++ b/scripts/create-release-branch-ops.yml
@@ -1,3 +1,6 @@
+- type: remove
+  path: /jobs/name=deploy-acceptance-env
+
 - type: replace
   path: /jobs/name=candidate-release/plan/get=candidate-version/params/bump
   value: minor
