Fix version ops file for new branches
Will start a new version line in bucket rather than using previous one

[#159408427](https://www.pivotaltracker.com/story/show/159408427)

Co-authored-by: Luan Santos <lsantos@pivotal.io>

--- a/scripts/create-release-branch-ops.yml
+++ b/scripts/create-release-branch-ops.yml
@@ -77,6 +77,10 @@
   value: ((branchver)).0.0
 
 - type: replace
+  path: /resources/name=candidate-version/source/key?
+  value: ((branchver)).x/version
+
+- type: replace
   path: /resources/name=bosh-candidate-release-tarballs/source/versioned_file
   value: ((branchname))/bosh-dev-release.tgz
 
